compilador.output
Terminais não utilizados na gramática

   ABRE_COLCHETES
   FECHA_COLCHETES
   TYPE
   ARRAY
   OF
   GOTO
   NOT


Gramática

    0 $accept: programa $end

    1 $@1: %empty

    2 $@2: %empty

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    4 $@3: %empty

    5 $@4: %empty

    6 bloco: rotulos parte_declara_vars $@3 procs_funcs $@4 comando_composto

    7 rotulos: LABEL lista_nums PONTO_E_VIRGULA
    8        | %empty

    9 lista_nums: NUMERO VIRGULA lista_nums
   10           | NUMERO

   11 parte_declara_vars: var

   12 $@5: %empty

   13 var: VAR $@5 declara_vars
   14    | %empty

   15 $@6: %empty

   16 declara_vars: declara_vars $@6 declara_var

   17 $@7: %empty

   18 declara_vars: $@7 declara_var

   19 $@8: %empty

   20 declara_var: lista_id_var DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA

   21 tipo: INTEGER
   22     | BOOLEAN

   23 lista_id_var: lista_id_var VIRGULA IDENT
   24             | IDENT

   25 lista_idents: lista_idents VIRGULA IDENT
   26             | IDENT

   27 $@9: %empty

   28 procs_funcs: PROCEDURE IDENT $@9 params_proc_func PONTO_E_VIRGULA bloco_proc_func

   29 $@10: %empty

   30 procs_funcs: FUNCTION IDENT $@10 params_proc_func DOIS_PONTOS tipo PONTO_E_VIRGULA bloco_proc_func
   31            | %empty

   32 $@11: %empty

   33 $@12: %empty

   34 $@13: %empty

   35 bloco_proc_func: rotulos parte_declara_vars $@11 procs_funcs $@12 comando_composto PONTO_E_VIRGULA $@13 procs_funcs

   36 $@14: %empty

   37 params_proc_func: ABRE_PARENTESES lista_dec_param $@14 FECHA_PARENTESES
   38                 | %empty

   39 $@15: %empty

   40 lista_dec_param: lista_dec_param PONTO_E_VIRGULA $@15 parametros_dec

   41 $@16: %empty

   42 lista_dec_param: $@16 parametros_dec
   43                | %empty

   44 parametros_dec: VAR lista_id_par DOIS_PONTOS tipo
   45               | lista_id_par DOIS_PONTOS tipo

   46 lista_id_par: lista_id_par VIRGULA IDENT
   47             | ident_ou_func

   48 comando_composto: T_BEGIN comandos_ T_END

   49 comandos_: comandos
   50          | %empty

   51 comandos: comandos PONTO_E_VIRGULA comando
   52         | comando

   53 comando: NUMERO DOIS_PONTOS comando_sem_rotulo
   54        | comando_composto
   55        | comando_sem_rotulo

   56 comando_sem_rotulo: atrib_proc
   57                   | comando_condicional
   58                   | comando_repetitivo
   59                   | READ ABRE_PARENTESES lista_param_leit FECHA_PARENTESES
   60                   | WRITE ABRE_PARENTESES lista_param_impr FECHA_PARENTESES

   61 lista_param_leit: lista_param_leit VIRGULA IDENT
   62                 | IDENT

   63 lista_param_impr: lista_param_impr VIRGULA IDENT
   64                 | IDENT

   65 comando_condicional: if_simples

   66 $@17: %empty

   67 comando_condicional: if_simples ELSE $@17 comando

   68 $@18: %empty

   69 $@19: %empty

   70 if_simples: IF $@18 expressao $@19 THEN comando

   71 $@20: %empty

   72 $@21: %empty

   73 comando_repetitivo: WHILE $@20 expressao $@21 DO comando

   74 $@22: %empty

   75 atrib_proc: IDENT $@22 exec_ou_atrib

   76 exec_ou_atrib: ATRIBUICAO expressao
   77              | exec_proc

   78 $@23: %empty

   79 exec_proc: ABRE_PARENTESES $@23 lista_de_parametros FECHA_PARENTESES
   80          | ABRE_PARENTESES FECHA_PARENTESES
   81          | %empty

   82 $@24: %empty

   83 lista_de_parametros: lista_de_parametros VIRGULA $@24 expressao
   84                    | expressao

   85 expressao: expressao_simples MAIOR expressao_simples
   86          | expressao_simples MENOR expressao_simples
   87          | expressao_simples MAIOR_IGUAL expressao_simples
   88          | expressao_simples MENOR_IGUAL expressao_simples
   89          | expressao_simples IGUAL expressao_simples
   90          | expressao_simples DIF expressao_simples
   91          | expressao_simples

   92 expressao_simples: expressao_simples MAIS termo
   93                  | expressao_simples MENOS termo
   94                  | expressao_simples OR termo
   95                  | termo

   96 termo: termo MULT fator
   97      | termo DIV fator
   98      | termo AND fator
   99      | fator

  100 fator: ident_ou_func
  101      | ABRE_PARENTESES expressao_simples FECHA_PARENTESES
  102      | NUMERO
  103      | TRUE
  104      | FALSE

  105 ident_ou_func: IDENT


Terminais, com as regras onde eles aparecem

$end (0) 0
error (256)
PROGRAM (258) 3
ABRE_PARENTESES (259) 3 37 59 60 79 80 101
FECHA_PARENTESES (260) 3 37 59 60 79 80 101
VIRGULA (261) 9 23 25 46 61 63 83
PONTO_E_VIRGULA (262) 3 7 20 28 30 35 40 51
DOIS_PONTOS (263) 20 30 44 45 53
PONTO (264) 3
T_BEGIN (265) 48
T_END (266) 48
VAR (267) 13 44
IDENT (268) 3 23 24 25 26 28 30 46 61 62 63 64 75 105
ATRIBUICAO (269) 76
MAIS (270) 92
MENOS (271) 93
MULT (272) 96
ABRE_COLCHETES (273)
FECHA_COLCHETES (274)
LABEL (275) 7
TYPE (276)
ARRAY (277)
OF (278)
GOTO (279)
IF (280) 70
THEN (281) 70
ELSE (282) 67
WHILE (283) 73
DO (284) 73
OR (285) 94
DIV (286) 97
AND (287) 98
NOT (288)
IGUAL (289) 89
DIF (290) 90
MENOR_IGUAL (291) 88
MAIOR_IGUAL (292) 87
MENOR (293) 86
MAIOR (294) 85
INTEGER (295) 21
BOOLEAN (296) 22
TRUE (297) 103
FALSE (298) 104
NUMERO (299) 9 10 53 102
READ (300) 59
WRITE (301) 60
PROCEDURE (302) 28
FUNCTION (303) 30
LOWER_THAN_ELSE (304)


Não-terminais com as regras onde eles aparecem

$accept (50)
    à esquerda: 0
programa (51)
    à esquerda: 3, à direita: 0
$@1 (52)
    à esquerda: 1, à direita: 3
$@2 (53)
    à esquerda: 2, à direita: 3
bloco (54)
    à esquerda: 6, à direita: 3
$@3 (55)
    à esquerda: 4, à direita: 6
$@4 (56)
    à esquerda: 5, à direita: 6
rotulos (57)
    à esquerda: 7 8, à direita: 6 35
lista_nums (58)
    à esquerda: 9 10, à direita: 7 9
parte_declara_vars (59)
    à esquerda: 11, à direita: 6 35
var (60)
    à esquerda: 13 14, à direita: 11
$@5 (61)
    à esquerda: 12, à direita: 13
declara_vars (62)
    à esquerda: 16 18, à direita: 13 16
$@6 (63)
    à esquerda: 15, à direita: 16
$@7 (64)
    à esquerda: 17, à direita: 18
declara_var (65)
    à esquerda: 20, à direita: 16 18
$@8 (66)
    à esquerda: 19, à direita: 20
tipo (67)
    à esquerda: 21 22, à direita: 20 30 44 45
lista_id_var (68)
    à esquerda: 23 24, à direita: 20 23
lista_idents (69)
    à esquerda: 25 26, à direita: 3 25
procs_funcs (70)
    à esquerda: 28 30 31, à direita: 6 35
$@9 (71)
    à esquerda: 27, à direita: 28
$@10 (72)
    à esquerda: 29, à direita: 30
bloco_proc_func (73)
    à esquerda: 35, à direita: 28 30
$@11 (74)
    à esquerda: 32, à direita: 35
$@12 (75)
    à esquerda: 33, à direita: 35
$@13 (76)
    à esquerda: 34, à direita: 35
params_proc_func (77)
    à esquerda: 37 38, à direita: 28 30
$@14 (78)
    à esquerda: 36, à direita: 37
lista_dec_param (79)
    à esquerda: 40 42 43, à direita: 37 40
$@15 (80)
    à esquerda: 39, à direita: 40
$@16 (81)
    à esquerda: 41, à direita: 42
parametros_dec (82)
    à esquerda: 44 45, à direita: 40 42
lista_id_par (83)
    à esquerda: 46 47, à direita: 44 45 46
comando_composto (84)
    à esquerda: 48, à direita: 6 35 54
comandos_ (85)
    à esquerda: 49 50, à direita: 48
comandos (86)
    à esquerda: 51 52, à direita: 49 51
comando (87)
    à esquerda: 53 54 55, à direita: 51 52 67 70 73
comando_sem_rotulo (88)
    à esquerda: 56 57 58 59 60, à direita: 53 55
lista_param_leit (89)
    à esquerda: 61 62, à direita: 59 61
lista_param_impr (90)
    à esquerda: 63 64, à direita: 60 63
comando_condicional (91)
    à esquerda: 65 67, à direita: 57
$@17 (92)
    à esquerda: 66, à direita: 67
if_simples (93)
    à esquerda: 70, à direita: 65 67
$@18 (94)
    à esquerda: 68, à direita: 70
$@19 (95)
    à esquerda: 69, à direita: 70
comando_repetitivo (96)
    à esquerda: 73, à direita: 58
$@20 (97)
    à esquerda: 71, à direita: 73
$@21 (98)
    à esquerda: 72, à direita: 73
atrib_proc (99)
    à esquerda: 75, à direita: 56
$@22 (100)
    à esquerda: 74, à direita: 75
exec_ou_atrib (101)
    à esquerda: 76 77, à direita: 75
exec_proc (102)
    à esquerda: 79 80 81, à direita: 77
$@23 (103)
    à esquerda: 78, à direita: 79
lista_de_parametros (104)
    à esquerda: 83 84, à direita: 79 83
$@24 (105)
    à esquerda: 82, à direita: 83
expressao (106)
    à esquerda: 85 86 87 88 89 90 91, à direita: 70 73 76 83 84
expressao_simples (107)
    à esquerda: 92 93 94 95, à direita: 85 86 87 88 89 90 91 92 93
    94 101
termo (108)
    à esquerda: 96 97 98 99, à direita: 92 93 94 95 96 97 98
fator (109)
    à esquerda: 100 101 102 103 104, à direita: 96 97 98 99
ident_ou_func (110)
    à esquerda: 105, à direita: 47 100


State 0

    0 $accept: . programa $end

    $padrão  reduzir usando a regra 1 ($@1)

    programa  ir ao estado 1
    $@1       ir ao estado 2


State 1

    0 $accept: programa . $end

    $end  deslocar, e ir ao estado 3


State 2

    3 programa: $@1 . PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    PROGRAM  deslocar, e ir ao estado 4


State 3

    0 $accept: programa $end .

    $padrão  aceitar


State 4

    3 programa: $@1 PROGRAM . IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 5


State 5

    3 programa: $@1 PROGRAM IDENT . $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    $padrão  reduzir usando a regra 2 ($@2)

    $@2  ir ao estado 6


State 6

    3 programa: $@1 PROGRAM IDENT $@2 . ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    ABRE_PARENTESES  deslocar, e ir ao estado 7


State 7

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES . lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO

    IDENT  deslocar, e ir ao estado 8

    lista_idents  ir ao estado 9


State 8

   26 lista_idents: IDENT .

    $padrão  reduzir usando a regra 26 (lista_idents)


State 9

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents . FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO
   25 lista_idents: lista_idents . VIRGULA IDENT

    FECHA_PARENTESES  deslocar, e ir ao estado 10
    VIRGULA           deslocar, e ir ao estado 11


State 10

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES . PONTO_E_VIRGULA bloco PONTO

    PONTO_E_VIRGULA  deslocar, e ir ao estado 12


State 11

   25 lista_idents: lista_idents VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 13


State 12

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA . bloco PONTO

    LABEL  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 8 (rotulos)

    bloco    ir ao estado 15
    rotulos  ir ao estado 16


State 13

   25 lista_idents: lista_idents VIRGULA IDENT .

    $padrão  reduzir usando a regra 25 (lista_idents)


State 14

    7 rotulos: LABEL . lista_nums PONTO_E_VIRGULA

    NUMERO  deslocar, e ir ao estado 17

    lista_nums  ir ao estado 18


State 15

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco . PONTO

    PONTO  deslocar, e ir ao estado 19


State 16

    6 bloco: rotulos . parte_declara_vars $@3 procs_funcs $@4 comando_composto

    VAR  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 14 (var)

    parte_declara_vars  ir ao estado 21
    var                 ir ao estado 22


State 17

    9 lista_nums: NUMERO . VIRGULA lista_nums
   10           | NUMERO .

    VIRGULA  deslocar, e ir ao estado 23

    $padrão  reduzir usando a regra 10 (lista_nums)


State 18

    7 rotulos: LABEL lista_nums . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 24


State 19

    3 programa: $@1 PROGRAM IDENT $@2 ABRE_PARENTESES lista_idents FECHA_PARENTESES PONTO_E_VIRGULA bloco PONTO .

    $padrão  reduzir usando a regra 3 (programa)


State 20

   13 var: VAR . $@5 declara_vars

    $padrão  reduzir usando a regra 12 ($@5)

    $@5  ir ao estado 25


State 21

    6 bloco: rotulos parte_declara_vars . $@3 procs_funcs $@4 comando_composto

    $padrão  reduzir usando a regra 4 ($@3)

    $@3  ir ao estado 26


State 22

   11 parte_declara_vars: var .

    $padrão  reduzir usando a regra 11 (parte_declara_vars)


State 23

    9 lista_nums: NUMERO VIRGULA . lista_nums

    NUMERO  deslocar, e ir ao estado 17

    lista_nums  ir ao estado 27


State 24

    7 rotulos: LABEL lista_nums PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 7 (rotulos)


State 25

   13 var: VAR $@5 . declara_vars

    $padrão  reduzir usando a regra 17 ($@7)

    declara_vars  ir ao estado 28
    $@7           ir ao estado 29


State 26

    6 bloco: rotulos parte_declara_vars $@3 . procs_funcs $@4 comando_composto

    PROCEDURE  deslocar, e ir ao estado 30
    FUNCTION   deslocar, e ir ao estado 31

    $padrão  reduzir usando a regra 31 (procs_funcs)

    procs_funcs  ir ao estado 32


State 27

    9 lista_nums: NUMERO VIRGULA lista_nums .

    $padrão  reduzir usando a regra 9 (lista_nums)


State 28

   13 var: VAR $@5 declara_vars .
   16 declara_vars: declara_vars . $@6 declara_var

    IDENT     reduzir usando a regra 15 ($@6)
    $padrão  reduzir usando a regra 13 (var)

    $@6  ir ao estado 33


State 29

   18 declara_vars: $@7 . declara_var

    IDENT  deslocar, e ir ao estado 34

    declara_var   ir ao estado 35
    lista_id_var  ir ao estado 36


State 30

   28 procs_funcs: PROCEDURE . IDENT $@9 params_proc_func PONTO_E_VIRGULA bloco_proc_func

    IDENT  deslocar, e ir ao estado 37


State 31

   30 procs_funcs: FUNCTION . IDENT $@10 params_proc_func DOIS_PONTOS tipo PONTO_E_VIRGULA bloco_proc_func

    IDENT  deslocar, e ir ao estado 38


State 32

    6 bloco: rotulos parte_declara_vars $@3 procs_funcs . $@4 comando_composto

    $padrão  reduzir usando a regra 5 ($@4)

    $@4  ir ao estado 39


State 33

   16 declara_vars: declara_vars $@6 . declara_var

    IDENT  deslocar, e ir ao estado 34

    declara_var   ir ao estado 40
    lista_id_var  ir ao estado 36


State 34

   24 lista_id_var: IDENT .

    $padrão  reduzir usando a regra 24 (lista_id_var)


State 35

   18 declara_vars: $@7 declara_var .

    $padrão  reduzir usando a regra 18 (declara_vars)


State 36

   20 declara_var: lista_id_var . DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA
   23 lista_id_var: lista_id_var . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 41
    DOIS_PONTOS  deslocar, e ir ao estado 42


State 37

   28 procs_funcs: PROCEDURE IDENT . $@9 params_proc_func PONTO_E_VIRGULA bloco_proc_func

    $padrão  reduzir usando a regra 27 ($@9)

    $@9  ir ao estado 43


State 38

   30 procs_funcs: FUNCTION IDENT . $@10 params_proc_func DOIS_PONTOS tipo PONTO_E_VIRGULA bloco_proc_func

    $padrão  reduzir usando a regra 29 ($@10)

    $@10  ir ao estado 44


State 39

    6 bloco: rotulos parte_declara_vars $@3 procs_funcs $@4 . comando_composto

    T_BEGIN  deslocar, e ir ao estado 45

    comando_composto  ir ao estado 46


State 40

   16 declara_vars: declara_vars $@6 declara_var .

    $padrão  reduzir usando a regra 16 (declara_vars)


State 41

   23 lista_id_var: lista_id_var VIRGULA . IDENT

    IDENT  deslocar, e ir ao estado 47


State 42

   20 declara_var: lista_id_var DOIS_PONTOS . tipo $@8 PONTO_E_VIRGULA

    INTEGER  deslocar, e ir ao estado 48
    BOOLEAN  deslocar, e ir ao estado 49

    tipo  ir ao estado 50


State 43

   28 procs_funcs: PROCEDURE IDENT $@9 . params_proc_func PONTO_E_VIRGULA bloco_proc_func

    ABRE_PARENTESES  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 38 (params_proc_func)

    params_proc_func  ir ao estado 52


State 44

   30 procs_funcs: FUNCTION IDENT $@10 . params_proc_func DOIS_PONTOS tipo PONTO_E_VIRGULA bloco_proc_func

    ABRE_PARENTESES  deslocar, e ir ao estado 51

    $padrão  reduzir usando a regra 38 (params_proc_func)

    params_proc_func  ir ao estado 53


State 45

   48 comando_composto: T_BEGIN . comandos_ T_END

    T_BEGIN  deslocar, e ir ao estado 45
    IDENT    deslocar, e ir ao estado 54
    IF       deslocar, e ir ao estado 55
    WHILE    deslocar, e ir ao estado 56
    NUMERO   deslocar, e ir ao estado 57
    READ     deslocar, e ir ao estado 58
    WRITE    deslocar, e ir ao estado 59

    $padrão  reduzir usando a regra 50 (comandos_)

    comando_composto     ir ao estado 60
    comandos_            ir ao estado 61
    comandos             ir ao estado 62
    comando              ir ao estado 63
    comando_sem_rotulo   ir ao estado 64
    comando_condicional  ir ao estado 65
    if_simples           ir ao estado 66
    comando_repetitivo   ir ao estado 67
    atrib_proc           ir ao estado 68


State 46

    6 bloco: rotulos parte_declara_vars $@3 procs_funcs $@4 comando_composto .

    $padrão  reduzir usando a regra 6 (bloco)


State 47

   23 lista_id_var: lista_id_var VIRGULA IDENT .

    $padrão  reduzir usando a regra 23 (lista_id_var)


State 48

   21 tipo: INTEGER .

    $padrão  reduzir usando a regra 21 (tipo)


State 49

   22 tipo: BOOLEAN .

    $padrão  reduzir usando a regra 22 (tipo)


State 50

   20 declara_var: lista_id_var DOIS_PONTOS tipo . $@8 PONTO_E_VIRGULA

    $padrão  reduzir usando a regra 19 ($@8)

    $@8  ir ao estado 69


State 51

   37 params_proc_func: ABRE_PARENTESES . lista_dec_param $@14 FECHA_PARENTESES

    FECHA_PARENTESES  reduzir usando a regra 43 (lista_dec_param)
    PONTO_E_VIRGULA   reduzir usando a regra 43 (lista_dec_param)
    $padrão          reduzir usando a regra 41 ($@16)

    lista_dec_param  ir ao estado 70
    $@16             ir ao estado 71


State 52

   28 procs_funcs: PROCEDURE IDENT $@9 params_proc_func . PONTO_E_VIRGULA bloco_proc_func

    PONTO_E_VIRGULA  deslocar, e ir ao estado 72


State 53

   30 procs_funcs: FUNCTION IDENT $@10 params_proc_func . DOIS_PONTOS tipo PONTO_E_VIRGULA bloco_proc_func

    DOIS_PONTOS  deslocar, e ir ao estado 73


State 54

   75 atrib_proc: IDENT . $@22 exec_ou_atrib

    $padrão  reduzir usando a regra 74 ($@22)

    $@22  ir ao estado 74


State 55

   70 if_simples: IF . $@18 expressao $@19 THEN comando

    $padrão  reduzir usando a regra 68 ($@18)

    $@18  ir ao estado 75


State 56

   73 comando_repetitivo: WHILE . $@20 expressao $@21 DO comando

    $padrão  reduzir usando a regra 71 ($@20)

    $@20  ir ao estado 76


State 57

   53 comando: NUMERO . DOIS_PONTOS comando_sem_rotulo

    DOIS_PONTOS  deslocar, e ir ao estado 77


State 58

   59 comando_sem_rotulo: READ . ABRE_PARENTESES lista_param_leit FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 78


State 59

   60 comando_sem_rotulo: WRITE . ABRE_PARENTESES lista_param_impr FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 79


State 60

   54 comando: comando_composto .

    $padrão  reduzir usando a regra 54 (comando)


State 61

   48 comando_composto: T_BEGIN comandos_ . T_END

    T_END  deslocar, e ir ao estado 80


State 62

   49 comandos_: comandos .
   51 comandos: comandos . PONTO_E_VIRGULA comando

    PONTO_E_VIRGULA  deslocar, e ir ao estado 81

    $padrão  reduzir usando a regra 49 (comandos_)


State 63

   52 comandos: comando .

    $padrão  reduzir usando a regra 52 (comandos)


State 64

   55 comando: comando_sem_rotulo .

    $padrão  reduzir usando a regra 55 (comando)


State 65

   57 comando_sem_rotulo: comando_condicional .

    $padrão  reduzir usando a regra 57 (comando_sem_rotulo)


State 66

   65 comando_condicional: if_simples .
   67                    | if_simples . ELSE $@17 comando

    ELSE  deslocar, e ir ao estado 82

    $padrão  reduzir usando a regra 65 (comando_condicional)


State 67

   58 comando_sem_rotulo: comando_repetitivo .

    $padrão  reduzir usando a regra 58 (comando_sem_rotulo)


State 68

   56 comando_sem_rotulo: atrib_proc .

    $padrão  reduzir usando a regra 56 (comando_sem_rotulo)


State 69

   20 declara_var: lista_id_var DOIS_PONTOS tipo $@8 . PONTO_E_VIRGULA

    PONTO_E_VIRGULA  deslocar, e ir ao estado 83


State 70

   37 params_proc_func: ABRE_PARENTESES lista_dec_param . $@14 FECHA_PARENTESES
   40 lista_dec_param: lista_dec_param . PONTO_E_VIRGULA $@15 parametros_dec

    PONTO_E_VIRGULA  deslocar, e ir ao estado 84

    $padrão  reduzir usando a regra 36 ($@14)

    $@14  ir ao estado 85


State 71

   42 lista_dec_param: $@16 . parametros_dec

    VAR    deslocar, e ir ao estado 86
    IDENT  deslocar, e ir ao estado 87

    parametros_dec  ir ao estado 88
    lista_id_par    ir ao estado 89
    ident_ou_func   ir ao estado 90


State 72

   28 procs_funcs: PROCEDURE IDENT $@9 params_proc_func PONTO_E_VIRGULA . bloco_proc_func

    LABEL  deslocar, e ir ao estado 14

    $padrão  reduzir usando a regra 8 (rotulos)

    rotulos          ir ao estado 91
    bloco_proc_func  ir ao estado 92


State 73

   30 procs_funcs: FUNCTION IDENT $@10 params_proc_func DOIS_PONTOS . tipo PONTO_E_VIRGULA bloco_proc_func

    INTEGER  deslocar, e ir ao estado 48
    BOOLEAN  deslocar, e ir ao estado 49

    tipo  ir ao estado 93


State 74

   75 atrib_proc: IDENT $@22 . exec_ou_atrib

    ABRE_PARENTESES  deslocar, e ir ao estado 94
    ATRIBUICAO       deslocar, e ir ao estado 95

    $padrão  reduzir usando a regra 81 (exec_proc)

    exec_ou_atrib  ir ao estado 96
    exec_proc      ir ao estado 97


State 75

   70 if_simples: IF $@18 . expressao $@19 THEN comando

    ABRE_PARENTESES  deslocar, e ir ao estado 98
    IDENT            deslocar, e ir ao estado 87
    TRUE             deslocar, e ir ao estado 99
    FALSE            deslocar, e ir ao estado 100
    NUMERO           deslocar, e ir ao estado 101

    expressao          ir ao estado 102
    expressao_simples  ir ao estado 103
    termo              ir ao estado 104
    fator              ir ao estado 105
    ident_ou_func      ir ao estado 106


State 76

   73 comando_repetitivo: WHILE $@20 . expressao $@21 DO comando

    ABRE_PARENTESES  deslocar, e ir ao estado 98
    IDENT            deslocar, e ir ao estado 87
    TRUE             deslocar, e ir ao estado 99
    FALSE            deslocar, e ir ao estado 100
    NUMERO           deslocar, e ir ao estado 101

    expressao          ir ao estado 107
    expressao_simples  ir ao estado 103
    termo              ir ao estado 104
    fator              ir ao estado 105
    ident_ou_func      ir ao estado 106


State 77

   53 comando: NUMERO DOIS_PONTOS . comando_sem_rotulo

    IDENT  deslocar, e ir ao estado 54
    IF     deslocar, e ir ao estado 55
    WHILE  deslocar, e ir ao estado 56
    READ   deslocar, e ir ao estado 58
    WRITE  deslocar, e ir ao estado 59

    comando_sem_rotulo   ir ao estado 108
    comando_condicional  ir ao estado 65
    if_simples           ir ao estado 66
    comando_repetitivo   ir ao estado 67
    atrib_proc           ir ao estado 68


State 78

   59 comando_sem_rotulo: READ ABRE_PARENTESES . lista_param_leit FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 109

    lista_param_leit  ir ao estado 110


State 79

   60 comando_sem_rotulo: WRITE ABRE_PARENTESES . lista_param_impr FECHA_PARENTESES

    IDENT  deslocar, e ir ao estado 111

    lista_param_impr  ir ao estado 112


State 80

   48 comando_composto: T_BEGIN comandos_ T_END .

    $padrão  reduzir usando a regra 48 (comando_composto)


State 81

   51 comandos: comandos PONTO_E_VIRGULA . comando

    T_BEGIN  deslocar, e ir ao estado 45
    IDENT    deslocar, e ir ao estado 54
    IF       deslocar, e ir ao estado 55
    WHILE    deslocar, e ir ao estado 56
    NUMERO   deslocar, e ir ao estado 57
    READ     deslocar, e ir ao estado 58
    WRITE    deslocar, e ir ao estado 59

    comando_composto     ir ao estado 60
    comando              ir ao estado 113
    comando_sem_rotulo   ir ao estado 64
    comando_condicional  ir ao estado 65
    if_simples           ir ao estado 66
    comando_repetitivo   ir ao estado 67
    atrib_proc           ir ao estado 68


State 82

   67 comando_condicional: if_simples ELSE . $@17 comando

    $padrão  reduzir usando a regra 66 ($@17)

    $@17  ir ao estado 114


State 83

   20 declara_var: lista_id_var DOIS_PONTOS tipo $@8 PONTO_E_VIRGULA .

    $padrão  reduzir usando a regra 20 (declara_var)


State 84

   40 lista_dec_param: lista_dec_param PONTO_E_VIRGULA . $@15 parametros_dec

    $padrão  reduzir usando a regra 39 ($@15)

    $@15  ir ao estado 115


State 85

   37 params_proc_func: ABRE_PARENTESES lista_dec_param $@14 . FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 116


State 86

   44 parametros_dec: VAR . lista_id_par DOIS_PONTOS tipo

    IDENT  deslocar, e ir ao estado 87

    lista_id_par   ir ao estado 117
    ident_ou_func  ir ao estado 90


State 87

  105 ident_ou_func: IDENT .

    $padrão  reduzir usando a regra 105 (ident_ou_func)


State 88

   42 lista_dec_param: $@16 parametros_dec .

    $padrão  reduzir usando a regra 42 (lista_dec_param)


State 89

   45 parametros_dec: lista_id_par . DOIS_PONTOS tipo
   46 lista_id_par: lista_id_par . VIRGULA IDENT

    VIRGULA      deslocar, e ir ao estado 118
    DOIS_PONTOS  deslocar, e ir ao estado 119


State 90

   47 lista_id_par: ident_ou_func .

    $padrão  reduzir usando a regra 47 (lista_id_par)


State 91

   35 bloco_proc_func: rotulos . parte_declara_vars $@11 procs_funcs $@12 comando_composto PONTO_E_VIRGULA $@13 procs_funcs

    VAR  deslocar, e ir ao estado 20

    $padrão  reduzir usando a regra 14 (var)

    parte_declara_vars  ir ao estado 120
    var                 ir ao estado 22


State 92

   28 procs_funcs: PROCEDURE IDENT $@9 params_proc_func PONTO_E_VIRGULA bloco_proc_func .

    $padrão  reduzir usando a regra 28 (procs_funcs)


State 93

   30 procs_funcs: FUNCTION IDENT $@10 params_proc_func DOIS_PONTOS tipo . PONTO_E_VIRGULA bloco_proc_func

    PONTO_E_VIRGULA  deslocar, e ir ao estado 121


State 94

   79 exec_proc: ABRE_PARENTESES . $@23 lista_de_parametros FECHA_PARENTESES
   80          | ABRE_PARENTESES . FECHA_PARENTESES

    FECHA_PARENTESES  deslocar, e ir ao estado 122

    $padrão  reduzir usando a regra 78 ($@23)

    $@23  ir ao estado 123


State 95

   76 exec_ou_atrib: ATRIBUICAO . expressao

    ABRE_PARENTESES  deslocar, e ir ao estado 98
    IDENT            deslocar, e ir ao estado 87
    TRUE             deslocar, e ir ao estado 99
    FALSE            deslocar, e ir ao estado 100
    NUMERO           deslocar, e ir ao estado 101

    expressao          ir ao estado 124
    expressao_simples  ir ao estado 103
    termo              ir ao estado 104
    fator              ir ao estado 105
    ident_ou_func      ir ao estado 106


State 96

   75 atrib_proc: IDENT $@22 exec_ou_atrib .

    $padrão  reduzir usando a regra 75 (atrib_proc)


State 97

   77 exec_ou_atrib: exec_proc .

    $padrão  reduzir usando a regra 77 (exec_ou_atrib)


State 98

  101 fator: ABRE_PARENTESES . expressao_simples FECHA_PARENTESES

    ABRE_PARENTESES  deslocar, e ir ao estado 98
    IDENT            deslocar, e ir ao estado 87
    TRUE             deslocar, e ir ao estado 99
    FALSE            deslocar, e ir ao estado 100
    NUMERO           deslocar, e ir ao estado 101

    expressao_simples  ir ao estado 125
    termo              ir ao estado 104
    fator              ir ao estado 105
    ident_ou_func      ir ao estado 106


State 99

  103 fator: TRUE .

    $padrão  reduzir usando a regra 103 (fator)


State 100

  104 fator: FALSE .

    $padrão  reduzir usando a regra 104 (fator)


State 101

  102 fator: NUMERO .

    $padrão  reduzir usando a regra 102 (fator)


State 102

   70 if_simples: IF $@18 expressao . $@19 THEN comando

    $padrão  reduzir usando a regra 69 ($@19)

    $@19  ir ao estado 126


State 103

   85 expressao: expressao_simples . MAIOR expressao_simples
   86          | expressao_simples . MENOR expressao_simples
   87          | expressao_simples . MAIOR_IGUAL expressao_simples
   88          | expressao_simples . MENOR_IGUAL expressao_simples
   89          | expressao_simples . IGUAL expressao_simples
   90          | expressao_simples . DIF expressao_simples
   91          | expressao_simples .
   92 expressao_simples: expressao_simples . MAIS termo
   93                  | expressao_simples . MENOS termo
   94                  | expressao_simples . OR termo

    MAIS         deslocar, e ir ao estado 127
    MENOS        deslocar, e ir ao estado 128
    OR           deslocar, e ir ao estado 129
    IGUAL        deslocar, e ir ao estado 130
    DIF          deslocar, e ir ao estado 131
    MENOR_IGUAL  deslocar, e ir ao estado 132
    MAIOR_IGUAL  deslocar, e ir ao estado 133
    MENOR        deslocar, e ir ao estado 134
    MAIOR        deslocar, e ir ao estado 135
